fixed code, nav, aside on mobile.

--- a/draft.css
+++ b/draft.css
@@ -400,8 +400,7 @@ nav,
 aside {
 	background: var(--low);
 	padding: var(--mainpaddng);
-	border-radius: var(--radius);
-	margin: 0 0 var(--mainpaddng) 0;
+	margin: 0 calc(var(--mainpaddng) * -1) var(--mainpaddng);
 }
 
 nav details {
@@ -1074,6 +1073,7 @@ pre > code {
 	pre > code {
 		border-radius: 0;
 		margin: var(--mainpaddng) calc(var(--mainpaddng) * -1);
+		max-width: none;
 	}
 }
 
@@ -1081,6 +1081,11 @@ img {
 	margin: var(--mainpaddng) 0;
 	display: block;
 	max-width: 100%;
+}
+
+body > img {
+	margin: var(--mainpaddng) calc(var(--mainpaddng) * -1);
+	max-width: calc(100% + var(--mainpaddng) * 2);
 }
 
 figure {
@@ -1403,7 +1408,13 @@ body > footer {
 	footer {
 		padding: calc(var(--mainpaddng) * 3) calc(50vw - 500px);
 	}
-
+	nav {
+		margin: var(--mainpaddng) 0;
+		border-radius: var(--radius);
+	}
+	header nav {
+		margin: 0;
+	}
 	main nav,
 	aside {
 		clear: both;
